--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       href="https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
