chore: 加上 footer 電子報區塊

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-Hant-TW">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hex React</title>
+    <meta
+      name="description"
+      content="用最精緻的工藝，將世界級的藝術珍寶帶到您的所在之處。"
+    />
+    <meta property="og:title" content="Olive Branch 高品質藝術複製品專賣店" />
+    <meta
+      property="og:description"
+      content="用最精緻的工藝，將世界級的藝術珍寶帶到您的所在之處。"
+    />
+    <title>Olive Branch｜讓藝術走進您的生活</title>
+    <link
+      rel="icon"
+      href="./src/assets/leaf-nature-forest-brand-plant_icon.ico"
+      type="img/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
